--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/signals"
+        android:id="@+id/mitem_signals"
         android:title="@string/signals"
-        android:icon="@drawable/ic_signal_foreground"/>
+        android:icon="@drawable/ic_signal_foreground"
+        android:iconTint="@color/dark_background"/>
     <item
-        android:id="@+id/news"
+        android:id="@+id/mitem_news"
         android:title="@string/news"
         android:icon="@drawable/ic_news_foreground"/>
     <item
-        android:id="@+id/settings"
+        android:id="@+id/mitem_settings"
         android:title="@string/settings"
         android:icon="@drawable/ic_settings_foreground"/>
 </menu>
