--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,8 +3,7 @@
     <item
         android:id="@+id/mitem_signals"
         android:title="@string/signals"
-        android:icon="@drawable/ic_signal_foreground"
-        android:iconTint="@color/dark_background"/>
+        android:icon="@drawable/ic_signal_foreground"/>
     <item
         android:id="@+id/mitem_news"
         android:title="@string/news"
