--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -11,21 +11,21 @@
         android:layout_width="150dp"
         android:layout_height="120dp"
         android:contentDescription="@string/app_name"
-        app:layout_constraintBottom_toTopOf="@+id/cardviewName"
+        app:layout_constraintBottom_toTopOf="@+id/cardview_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardviewName"
+        android:id="@+id/cardview_name"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/cardviewPhone"
+        app:layout_constraintBottom_toTopOf="@+id/cardview_mail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo">
@@ -47,103 +47,16 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardviewPhone"
+        android:id="@+id/cardview_mail"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         app:cardCornerRadius="15dp"
-        app:cardElevation="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/cardviewAccount"
+        app:layout_constraintBottom_toTopOf="@+id/cardview_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardviewName">
-
-        <EditText
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:id="@+id/etxtPhone"
-            android:background="@drawable/custom_input_effect"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/phone"
-            android:ems="10"
-            android:inputType="phone"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:importantForAutofill="no"/>
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardviewAccount"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/cardviewPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardviewPhone">
-
-        <EditText
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:id="@+id/etxtAccount"
-            android:background="@drawable/custom_input_effect"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/account"
-            android:ems="10"
-            android:inputType="text"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:importantForAutofill="no"/>
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardviewPassword"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/cardviewEmail"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardviewAccount">
-
-        <EditText
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:id="@+id/etxtPassword"
-            android:background="@drawable/custom_input_effect"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/password"
-            android:ems="10"
-            android:inputType="textPassword"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:importantForAutofill="no"/>
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardviewEmail"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardviewPassword">
+        app:layout_constraintTop_toBottomOf="@+id/cardview_name">
 
         <EditText
             android:id="@+id/etxtEmail"
@@ -161,18 +74,45 @@
 
     </androidx.cardview.widget.CardView>
 
-    <Button
-        android:id="@+id/btnSignUp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardview_password"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardview_mail"        >
+
+        <EditText
+            android:id="@+id/etxtPassword"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/custom_input_effect"
+            android:ems="10"
+            android:hint="@string/password"
+            android:importantForAutofill="no"
+            android:inputType="textPassword"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
+
+    </androidx.cardview.widget.CardView><Button
+        android:id="@+id/btn_sign_up"
         android:layout_width="150dp"
         android:layout_height="60dp"
         android:backgroundTint="@color/dark_input_button_background"
-        android:text="@string/signup"
+        android:text="@string/register"
         android:textColor="@color/white"
         app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardviewEmail"/>
+        app:layout_constraintTop_toBottomOf="@+id/cardview_password"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
