--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -17,43 +17,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:baselineAligned="false">
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:gravity="start"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/txtv_pair"
+                android:text="XAUUSD"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="22sp"
+                android:singleLine="true"
+                android:padding="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
-                <TextView
-                    android:id="@+id/txtv_pair"
-                    android:text="XAUUSD"
-                    android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:textSize="22sp"
-                    android:singleLine="true"
-                    android:padding="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:ignore="HardcodedText" />
-                <TextView
-                    android:id="@+id/txtv_time"
-                    android:text="11:00:00 GMT+07"
-                    android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
-                    android:padding="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:ignore="HardcodedText" />
-            </LinearLayout>
+                tools:ignore="HardcodedText" />
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:gravity="center"
+                android:gravity="end"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
                 <TextView
                     android:id="@+id/txtv_type"
                     android:text="Buy"
@@ -88,11 +70,23 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/txtv_time"
+            android:text="11:00:00 GMT+07"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:padding="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:baselineAligned="false">
+            android:baselineAligned="false"
+            android:layout_weight="1">
             <LinearLayout
                 android:orientation="horizontal"
                 android:gravity="center"
