--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -58,7 +58,7 @@
         android:layout_marginRight="32dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
+        app:layout_constraintBottom_toTopOf="@+id/btn_forgot_pass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardview_account">
@@ -83,7 +83,7 @@
             android:background="@color/dark_input_button_background"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:layout_margin="5dp"
             android:contentDescription="@string/show_password"
             app:srcCompat="@mipmap/ic_show_password_foreground"/>
         <ImageButton
@@ -92,10 +92,24 @@
             android:background="@color/dark_input_button_background"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:layout_margin="5dp"
             android:contentDescription="@string/hide_password"
             app:srcCompat="@mipmap/ic_hide_password_foreground"/>
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/btn_forgot_pass"
+        android:textColor="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/forgot_pass"
+        android:gravity="center"
+        android:padding="15dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
+        app:layout_constraintTop_toBottomOf="@+id/cardview_password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <Button
         android:id="@+id/btn_sign_in"
@@ -105,22 +119,20 @@
         android:text="@string/signin"
         android:backgroundTint="@color/dark_input_button_background"
         app:cornerRadius="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardview_password"/>
+        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
+        app:layout_constraintTop_toBottomOf="@+id/btn_forgot_pass"/>
 
     <TextView
         android:id="@+id/btn_sign_up"
         android:textColor="@color/white"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
         android:text="@string/signup"
         android:gravity="center"
         android:padding="15dp"
-        android:backgroundTint="@color/dark_input_button_background"
-        app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
