--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -11,8 +11,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/img_user_ava"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_width="300dp"
         android:layout_weight="2"
         android:layout_gravity="center"
         android:layout_margin="10dp"
@@ -22,13 +22,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_weight="2"
         android:orientation="vertical">
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:backgroundTint="@color/dark_background"
-            android:layout_gravity="center"
+            android:layout_gravity="top"
             app:cardCornerRadius="15dp"
             android:layout_margin="10dp">
             <LinearLayout
@@ -43,7 +42,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:layout_weight="1"
                     android:gravity="start"
                     android:text="@string/tv_name"
                     android:textColor="@color/white"
@@ -52,11 +50,9 @@
 
                 <EditText
                     android:id="@+id/etxt_username"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:gravity="center"
-                    android:text="@string/tv_name_ex"
                     android:textColor="@color/white"
                     android:textSize="22sp"
                     android:textStyle="bold"
@@ -88,18 +84,15 @@
                     android:textSize="22sp"
                     android:textStyle="bold"
                     android:layout_marginStart="10dp"
-                    android:gravity="start"
-                    android:layout_weight="1"/>
+                    android:gravity="start"/>
                 <EditText
                     android:id="@+id/etxt_usermail"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/tv_mail_ex"
                     android:textColor="@color/white"
                     android:textSize="22sp"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:layout_weight="1"
                     android:importantForAutofill="no"
                     android:inputType="textEmailAddress"
                     tools:ignore="LabelFor" />
@@ -107,6 +100,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardview_phone"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:backgroundTint="@color/dark_background"
@@ -128,18 +122,15 @@
                     android:textSize="22sp"
                     android:textStyle="bold"
                     android:layout_marginStart="10dp"
-                    android:gravity="start"
-                    android:layout_weight="1"/>
+                    android:gravity="start"/>
                 <EditText
                     android:id="@+id/etxt_userphone"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/tv_phone_ex"
                     android:textColor="@color/white"
                     android:textSize="22sp"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:layout_weight="1"
                     android:inputType="phone"
                     android:importantForAutofill="no"
                     tools:ignore="LabelFor" />
@@ -147,20 +138,58 @@
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="10dp">
+
+        <Button
+            android:id="@+id/btn_change_info"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_centerInParent="true"
+            android:text="@string/change_user_info"
+            android:backgroundTint="@color/dark_background"
+            app:cornerRadius="15dp"/>
+
+        <Button
+            android:id="@+id/btn_save_info"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:backgroundTint="@color/dark_background"
+            android:layout_alignStart="@+id/btn_change_info"
+            android:text="@string/save_user_info"
+            android:textColor="@color/white"
+            app:cornerRadius="15dp" />
+
+        <Button
+            android:id="@+id/btn_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_alignEnd="@+id/btn_change_info"
+            android:backgroundTint="@color/dark_background"
+            android:text="@string/cancel"
+            android:textColor="@color/white"
+            app:cornerRadius="15dp" />
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_weight="1">
+        android:layout_marginTop="10dp">
+
         <Button
-            android:id="@+id/btn_change_info"
-            android:textColor="@color/white"
-            android:layout_width="250dp"
+            android:id="@+id/btn_change_pass"
+            android:layout_width="wrap_content"
             android:layout_height="60dp"
-            android:text="@string/change_user_info"
             android:backgroundTint="@color/dark_background"
-            app:cornerRadius="15dp"/>
+            android:text="@string/change_pass"
+            android:textColor="@color/white"
+            app:cornerRadius="15dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -168,15 +197,16 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_weight="1">
+        android:layout_margin="10dp">
+
         <Button
             android:id="@+id/btn_logout"
-            android:textColor="@color/white"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="60dp"
-            android:text="@string/signout"
             android:backgroundTint="@color/dark_background"
-            app:cornerRadius="15dp"/>
+            android:text="@string/signout"
+            android:textColor="@color/white"
+            app:cornerRadius="15dp" />
     </LinearLayout>
 
 </LinearLayout>
