--- a/app/src/main/res/layout-land/activity_signin.xml
+++ b/app/src/main/res/layout-land/activity_signin.xml
@@ -6,7 +6,8 @@
     android:theme="@style/Theme.AppCompat.NoActionBar"
     android:background="@color/dark_background"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/logo_imageView"
