--- a/app/src/main/res/layout-land/fragment_settings.xml
+++ b/app/src/main/res/layout-land/fragment_settings.xml
@@ -21,7 +21,8 @@
             android:layout_weight="1"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:src="@mipmap/user_ava_default_round"/>
+            android:src="@mipmap/user_ava_default_round"
+            tools:ignore="NestedWeights" />
 
         <LinearLayout
             android:layout_width="0dp"
