--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:orientation="vertical"
     app:cardBackgroundColor="@color/dark_background"
     app:cardCornerRadius="15dp"
     app:cardElevation="8dp">
